# fifteen_puzzle

./: README.md  code.py  fifteen_puzzle.py  pyproject.toml
