[project]
name = "fifteen-puzzle"
version = "0.0.5"
description = "Basic fifteen puzzle game with wxPython library"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Andrea Diamantini", email = "adjam@proton.me" }]
keywords = ["GUI", "fifteen-puzzle", "wxpython", "wx"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "GPL-3.0-or-later"

dependencies = ["wxpython>=4.2.2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["fifteen_puzzle.py"]

[project.urls]
Homepage = "https://github.com/adjamhub/fifteen-puzzle"
Issues = "https://github.com/adjamhub/fifteen-puzzle/issues"

[project.gui-scripts]
fifteen-puzzle = "fifteen_puzzle:main"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
